--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 
 <body>
     <div class="layout">
+
         <!--Cabecera-->
         <header class="header">
             <h1>Mis Peliculas</h1>
         </header>
+
         <!--Barra de Navegación-->
         <nav class="nav">
             <ul>
@@ -24,10 +26,40 @@
                 <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
+
         <!--Contenido Principal-->
-        <section>
+        <section class="content">
             <!--Aqui van las peliculas-->
+            <article class="peli-item">
+                <h3 class="title">Peliculas</h3>
+                <p class="description">Descripcion de tu pelicula</p>
+                <button class="edit">Editar</button>
+                <button class="delete">Borrar</button>
+            </article>
+
+            <article class="peli-item">
+                <h3 class="title">Peliculas</h3>
+                <p class="description">Descripcion de tu pelicula</p>
+                <button class="edit">Editar</button>
+                <button class="delete">Borrar</button>
+            </article>
+
+            <article class="peli-item">
+                <h3 class="title">Peliculas</h3>
+                <p class="description">Descripcion de tu pelicula</p>
+                <button class="edit">Editar</button>
+                <button class="delete">Borrar</button>
+            </article>
+
+            <article class="peli-item">
+                <h3 class="title">Peliculas</h3>
+                <p class="description">Descripcion de tu pelicula</p>
+                <button class="edit">Editar</button>
+                <button class="delete">Borrar</button>
+            </article>
+
         </section>
+
         <!--Barra lateral-->
         <aside class="lateral">
             <div class="search">
@@ -46,6 +78,7 @@
                 </form>
             </div>
         </aside>
+
         <!--Pie de página-->
         <footer>
             &copy; Proyecto inicial y maqueteo inicial de Js ES12 y TypeScript
