Aplicando CSS Grid Layout

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </aside>
 
         <!--Pie de página-->
-        <footer>
+        <footer class="footer">
             &copy; Proyecto inicial y maqueteo inicial de Js ES12 y TypeScript
         </footer>
 
