Estilos del header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Proyecto 05</title>
+    <title>peliculas.asdf</title>
 </head>
 
 <body>
@@ -14,7 +14,10 @@
 
         <!--Cabecera-->
         <header class="header">
-            <h1>Mis Peliculas</h1>
+            <div class="logo">
+                <div class="play"></div>
+                <h1>Mis Peliculas</h1>
+            </div>
         </header>
 
         <!--Barra de Navegación-->
