--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>peliculas.asdf</title>
+    <title>Mi Recetario Personal</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <header class="header">
             <div class="logo">
                 <div class="play"></div>
-                <h1>Mis Peliculas</h1>
+                <h1></h1>
             </div>
         </header>
 
@@ -24,7 +24,7 @@
         <nav class="nav">
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Peliculas</a></li>
+                <li><a href="#">Recetas</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
@@ -32,31 +32,31 @@
 
         <!--Contenido Principal-->
         <section class="content">
-            <!--Aqui van las peliculas-->
-            <article class="peli-item">
-                <h3 class="title">Peliculas</h3>
-                <p class="description">Descripcion de tu pelicula</p>
+            <!--Aqui van las recetas-->
+            <article class="receta-item">
+                <h3 class="title">Receta</h3>
+                <p class="description">Descripcion de tu receta</p>
                 <button class="edit">Editar</button>
                 <button class="delete">Borrar</button>
             </article>
 
             <article class="peli-item">
-                <h3 class="title">Peliculas</h3>
-                <p class="description">Descripcion de tu pelicula</p>
+                <h3 class="title">Receta</h3>
+                <p class="description">Descripcion de tu receta</p>
                 <button class="edit">Editar</button>
                 <button class="delete">Borrar</button>
             </article>
 
             <article class="peli-item">
-                <h3 class="title">Peliculas</h3>
-                <p class="description">Descripcion de tu pelicula</p>
+                <h3 class="title">Receta</h3>
+                <p class="description">Descripcion de tu receta</p>
                 <button class="edit">Editar</button>
                 <button class="delete">Borrar</button>
             </article>
 
             <article class="peli-item">
-                <h3 class="title">Peliculas</h3>
-                <p class="description">Descripcion de tu pelicula</p>
+                <h3 class="title">Receta</h3>
+                <p class="description">Descripcion de tu receta</p>
                 <button class="edit">Editar</button>
                 <button class="delete">Borrar</button>
             </article>
@@ -73,7 +73,7 @@
                 </form>
             </div>
             <div class="add">
-                <h3 class="title">Añadir peliculas</h3>
+                <h3 class="title">Añadir recetas</h3>
                 <form>
                     <input type="text" placeholder="Titulo" />
                     <textarea placeholder="descripcion"></textarea>
